insert div container bootstrap for style

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
    <body>
       
       <main>
-         <div class="Fizz"></div>
-         <div class="Buzz"></div>
-         <div class="FizzBuzz"></div>
-         <div class="fizzNumbers"></div>
+         <div class="container">
+
+            <div class="Fizz"></div>
+            <div class="Buzz"></div>
+            <div class="FizzBuzz"></div>
+            <div class="fizzNumbers"></div>
+         </div>
       </main>
 
 
