start modify style with bootstrap

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
       
       <main>
          <div class="container">
+            <div class="row">
+               <div class="col-6">
+                  <div id="Fizz"></div>
+               </div>
+            </div>
 
-            <div class="Fizz"></div>
-            <div class="Buzz"></div>
-            <div class="FizzBuzz"></div>
-            <div class="fizzNumbers"></div>
+            <div class="row">
+               <div class="col-6">
+                  <div id="Buzz"></div>
+               </div>
+            </div>
+            <div id="FizzBuzz"></div>
+            <div id="fizzNumbers"></div>
          </div>
       </main>
 
