--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
                   <div id="Buzz"></div>
                </div>
             </div>
-            <div id="FizzBuzz"></div>
-            <div id="fizzNumbers"></div>
+
+            <div class="row">
+               <div class="col-6">
+                  <div id="FizzBuzz"></div>
+               </div>
+            </div>
+
+            <div class="row">
+               <div class="col-12">
+                  <div id="fizzNumbers"></div>
+               </div>
+            </div>
          </div>
       </main>
 
