--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
                </div>
             </div>
 
-            <div class="row">
+            <div class="row text-center">
                <div class="col-6">
                   <div id="Buzz"></div>
                </div>
             </div>
 
-            <div class="row">
+            <div class="row text-center">
                <div class="col-6">
                   <div id="FizzBuzz"></div>
                </div>
             </div>
 
-            <div class="row">
-               <div class="col-12">
+            <div class="row text-center">
+               <div class="col-9">
                   <div id="fizzNumbers"></div>
                </div>
             </div>
